<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/app_title"
            android:text="@string/title"

            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/player1"
            android:text="@string/player1"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_below="@+id/app_title"
    />

    <EditText
            android:id="@+id/player1_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1"

            android:inputType="text"
    />

    <TextView
            android:id="@+id/player2"
            android:text="@string/player2"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_below="@+id/player1_input"
    />

    <EditText
            android:id="@+id/player2_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player2"

            android:inputType="text"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player2_input"

            android:id="@+id/extension_question"
            android:text="@string/extension_question"

    />

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/extension_question"

            android:id="@+id/extension1"

            android:text="@string/extension1"
    />

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/extension1"
            android:layout_centerVertical="true"

            android:id="@+id/extension2"

            android:text="@string/extension2"
    />

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/extension2"

            android:id="@+id/extension3"

            android:text="@string/extension3"
    />

    <Button
            android:id="@+id/nb_button"
            android:text="@string/submit"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/extension3"

            android:onClick="onClickDistributeRaces"
    />

</RelativeLayout>