<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/app_title"
            android:text="@string/title"

            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/player1"
            android:text="@string/player1"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_below="@+id/app_title"
    />

    <EditText
            android:id="@+id/player1_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1"

            android:inputType="text"
    />

    <TextView
            android:id="@+id/player2"
            android:text="@string/player2"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_below="@+id/player1_input"
    />

    <EditText
            android:id="@+id/player2_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player2"

            android:inputType="text"
    />

    <TextView
            android:id="@+id/player3"
            android:text="@string/player3"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_below="@+id/player2_input"
    />

    <EditText
            android:id="@+id/player3_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player3"

            android:inputType="text"
    />

    <Button
            android:id="@+id/nb_button"
            android:text="@string/submit"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/player3_input"

            android:onClick="onClickDistributeRaces"
    />

</RelativeLayout>